--- a/css/main.css
+++ b/css/main.css
@@ -89,19 +89,36 @@ textarea {
 .content-wrapper {
   outline: 3px dotted red;
   width: 90%;
+  margin: 50px 0;
 }
 header {
   display: flex;
   justify-content: center;
+  width: auto;
+  padding: 15px 0;
 }
 header .content-wrapper{
   display: flex;
   justify-content: center;
+  margin: 0;
+}
+
+.header-divider {
+  width: 100%;
+  height: 1px;
+  margin: 10px 0 20px 0;
 }
 
 header nav ul{
   display: flex;
   justify-content: space-around;
+  width: 100%;
+  padding: 15px 0;
+}
+
+header nav{
+  width:60%;
+  padding: 15px 0;
 }
 
 footer {
@@ -110,15 +127,35 @@ footer {
   align-items: center;
   text-align: center;
 }
+
+footer p{
+  margin: 0;
+}
+
 footer .social-icons{
 display: flex;
-justify-content: space-around;
+justify-content: center;
 align-items: center;
 }
 
 footer .social-icons p{
 display: flex;
 justify-content: center;
+}
+
+footer .content-wrapper{
+  width: 55%;
+  margin: 50px 0;
+  padding: 15px 0;
+  margin: 50px;
+}
+
+footer .contact{
+  margin-top: 50px;
+}
+
+footer .copyright{
+  margin: 20px 0;
 }
 
 .hero-area{
@@ -143,11 +180,33 @@ display: flex;
 justify-content: center;
 align-items: flex-start;
 }
+
+.features h2 {
+margin-bottom: 60px;  
+}
+
+.features article{
+width: 63%;
+margin: 30px 0;
+}
+
+.features p {
+  margin: 0;
+}
 /*Reviews*/
 
 .reviews {
   display: flex;
   justify-content: center;
+}
+
+.reviews h2{
+
+}
+
+.reviews h3{
+  width: 55%;
+  padding: 15px 0;
 }
 
 /* ==========================================================================
@@ -165,6 +224,10 @@ align-items: flex-start;
   justify-content: center;
 }
 
+.contact-content p{
+  margin: 0;
+}
+
 /* ==========================================================================
     FAQ Page
    ========================================================================== */
@@ -173,12 +236,21 @@ align-items: flex-start;
 display: flex;
 justify-content: center;
 }
+
 .faq .content-wrapper{
 display: flex;
 justify-content: center;
 align-items: flex-start;
+margin: 50px 0 0 0;
 }
 
+.faq h2 {
+margin: 40px;
+}
+
+.faq-content {
+margin-bottom: 50px;
+}
 /* ==========================================================================
    Helper classes
    ========================================================================== */
