--- a/css/main.css
+++ b/css/main.css
@@ -94,12 +94,13 @@ textarea {
 header {
   display: flex;
   justify-content: center;
-  width: auto;
   padding: 15px 0;
 }
 header .content-wrapper{
   display: flex;
   justify-content: center;
+  align-items: center;
+  flex-flow: row-wrap;
   margin: 0;
 }
 
@@ -113,12 +114,10 @@ header nav ul{
   display: flex;
   justify-content: space-around;
   width: 100%;
-  padding: 15px 0;
 }
 
 header nav{
   width:60%;
-  padding: 15px 0;
 }
 
 footer {
@@ -134,31 +133,29 @@ footer p{
 
 footer .social-icons{
 display: flex;
-justify-content: center;
+justify-content: space-around;
 align-items: center;
 }
 
 footer .social-icons p{
 display: flex;
 justify-content: center;
+align-items: center;
 }
 
 footer .content-wrapper{
   width: 55%;
-  margin: 50px 0;
-  padding: 15px 0;
-  margin: 50px;
 }
 
 footer .contact{
-  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 footer .copyright{
   margin: 20px 0;
 }
 
-.hero-area{
+.hero-area {
   display: flex;
   justify-content: center;
 }
@@ -179,6 +176,7 @@ aside{
 display: flex;
 justify-content: center;
 align-items: flex-start;
+flex-flow: row wrap;
 }
 
 .features h2 {
@@ -201,12 +199,12 @@ margin: 30px 0;
 }
 
 .reviews h2{
-
+margin-bottom: 40px;
 }
 
 .reviews h3{
   width: 55%;
-  padding: 15px 0;
+  padding: 20px 0;
 }
 
 /* ==========================================================================
@@ -214,18 +212,19 @@ margin: 30px 0;
    ========================================================================== */
 /**/
 
-.mission{
+.mission {
   display: flex;
   justify-content: center;
 }
 
-.contact-section{
+.contact-section {
   display: flex;
   justify-content: center;
 }
 
 .contact-content p{
-  margin: 0;
+ margin: 0;
+
 }
 
 /* ==========================================================================
@@ -241,15 +240,17 @@ justify-content: center;
 display: flex;
 justify-content: center;
 align-items: flex-start;
+flex-flow: row wrap;
 margin: 50px 0 0 0;
 }
 
 .faq h2 {
-margin: 40px;
+margin-bottom: 40px;
 }
 
 .faq-content {
 margin-bottom: 50px;
+
 }
 /* ==========================================================================
    Helper classes
@@ -339,10 +340,139 @@ margin-bottom: 50px;
    Modify as content requires.
    ========================================================================== */
 
-@media only screen and (min-width: 35em) {
+
+@media only screen and (min-width:768px) {
+  /*General styles*/
+  .content-wrapper {
+    max-width: 640px;
+    margin: 100px 0;
+  }
+   /* Header */
+ 
+   header {
+    padding: 33px 0;
+   }
+
+   header .content-wrapper {
+       width:100%;
+       justify-content: space-between;
+   }
+
+   header nav {
+       width:20%; 
+   }
+
+   header nav ul {
+    justify-content: space-between;
+   }
+
+   .header-divider {
+       display: none;
+   }
+
+   /* Hero Area */
+
+   /* Aside */
+   aside .content-wrapper {
+       margin: 50px 0;
+       display: flex;
+       justify-content: space-between;
+       align-content: flex-start;
+   }
+
+   aside .content-wrapper .form-description,
+   aside .content-wrapper .form {        
+       width: 40%;         
+       margin: 0;
+   }
+
+   /* Features */
+
+   .features article {
+    display: flex;
+    align-items: center;
+    flex-flow: column wrap;
+    flex-basis: 50%;
+   }
+
+   .features .features-item-description {
+       width: 50%;
+   }
+
+   /* Reviews */
+   .reviews article {
+    display: flex;
+    justify-content: space-between;
+   }
+   
+   .reviews article div {
+       width: 49%;        
+   }
+
+   /* Footer */
+   footer .content-wrapper {
+       width:65%; 
+   }
+   
+   .footer-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+   }
+
+   footer .contact {
+       margin-bottom: 0;
+   }
+
+   footer .copyright {
+       width: 100%;
+   }
+}
   /* Style adjustments for viewports that meet the condition */
 }
 
+/* ==========================================================================
+     About Page
+     ========================================================================== */
+
+     .mission-content {
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
+      padding-top: 20px
+    }
+  
+    .mission-content p {
+      width: 45%;
+    }
+  
+    .contact-section .content-wrapper h2 {
+      width: 80%;
+    }
+  
+    .contact-content {
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
+    }
+  
+    /* ==========================================================================
+       FAQ Page
+       ========================================================================== */
+  
+    .faq .content-wrapper {
+      justify-content: space-between;
+    }
+  
+    .faq-content {
+      flex-basis: 45%;
+    }
+  
+    .faq h2 {
+      width: 100%;
+    }
+  }
+  
 @media print,
   (-webkit-min-device-pixel-ratio: 1.25),
   (min-resolution: 1.25dppx),
