--- a/css/main.css
+++ b/css/main.css
@@ -83,6 +83,7 @@ textarea {
   resize: vertical;
 }
 
+
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
@@ -95,11 +96,16 @@ html {
 body {
   font-family: 'Open Sans', sans-serif;
   font-size: 1em;
+  color: #e2e3ed;
   text-align: left;
 }
 
 ul,
-ol {list-style-type: none;}
+ol {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
 
 a {
   color: #e2e3ed;
@@ -109,6 +115,7 @@ a {
 h2 {
   font-family: 'Poppins', sans-serif;
   font-size: 1.875em;
+  font-weight: 500;
 }
 
 h3,
@@ -116,6 +123,7 @@ h4 {
   font-family: 'Poppins', sans-serif;
   margin: 20px 0;
   font-size: 1.125em,
+    font-weight: 500;
 }
 
 p {
@@ -138,6 +146,7 @@ header {
   display: flex;
   justify-content: center;
   padding: 15px 0;
+  background-color: #202322;
 }
 
 header .content-wrapper {
@@ -152,6 +161,7 @@ header .content-wrapper {
   width: 100%;
   height: 1px;
   margin: 10px 0 20px 0;
+  background: #3a3a3a;
 }
 
 header nav ul {
@@ -160,8 +170,15 @@ header nav ul {
   width: 100%;
 }
 
+header nav ul li {
+  font-size: 1.125em;
+}
+
 header nav {
   width: 60%;
+  font-size: 1.125em;
+  font-weight: 700;
+  text-transform: uppercase;
 }
 
 footer {
@@ -169,6 +186,7 @@ footer {
   flex-direction: column;
   align-items: center;
   text-align: center;
+  background-color: #202322;
 }
 
 footer p {
@@ -209,11 +227,45 @@ footer .copyright {
   justify-content: center;
 }
 
+.hero-area h1 {
+  font-size: 2.25em;
+  font-family: 'Poppins', Helvetica, Arial, sans-serif;
+  line-height: 1.2;
+  font-weight: 500;
+}
+
 /*Aside*/
 
 aside {
   display: flex;
   justify-content: center;
+  background-color: #527158;
+}
+
+aside.form {
+  margin-top: 30px;
+}
+
+input[type=text] {
+  box-sizing: border-box;
+  width: 100%;
+  color: #2a423a;
+  font-style: italic;
+  padding: 1em;
+}
+
+input[type=button] {
+  width: 100%;
+  padding: 20px 0;
+  margin-top: 20px;
+  background-color: #2a423a;
+  font-family: 'Poppins', Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  font-size: 1.125em;
+  color: #e2e3ed;
+  border: none;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 /*Features*/
@@ -241,6 +293,7 @@ aside {
 
 .features p {
   margin: 0;
+  text-align: center;
 }
 
 /*Reviews*/
@@ -248,10 +301,12 @@ aside {
 .reviews {
   display: flex;
   justify-content: center;
+  background-color: #2a423a;
 }
 
 .reviews h2 {
   margin-bottom: 40px;
+  line-height: 1;
 }
 
 .reviews h3 {
@@ -267,11 +322,13 @@ aside {
 .mission {
   display: flex;
   justify-content: center;
+  background-color: #527158;
 }
 
 .contact-section {
   display: flex;
   justify-content: center;
+  background-color: #2a423a;
 }
 
 .contact-content p {
@@ -286,6 +343,7 @@ aside {
 .faq {
   display: flex;
   justify-content: center;
+  background-color: #527158;
 }
 
 .faq .content-wrapper {
@@ -298,11 +356,15 @@ aside {
 
 .faq h2 {
   margin-bottom: 40px;
+  line-height: 1;
 }
 
 .faq-content {
   margin-bottom: 50px;
+}
 
+faq-content h4 {
+  line-height: 1.333;
 }
 
 /* ==========================================================================
@@ -386,12 +448,13 @@ aside {
   clear: both;
 }
 
+
+
 /* ==========================================================================
    EXAMPLE Media Queries for Responsive Design.
    These examples override the primary ('mobile first') styles.
    Modify as content requires.
    ========================================================================== */
-
 
 @media only screen and (min-width:768px) {
 
@@ -401,7 +464,17 @@ aside {
     margin: 100px 0;
   }
 
- /* Header */
+  h2 {
+    font-size: 2.25em;
+    line-height: 1.333;
+  }
+
+  h3 {
+    font-size: 1.5em;
+    line-height: 1.25;
+  }
+
+  /* Header */
 
   header {
     padding: 33px 0;
@@ -410,6 +483,10 @@ aside {
   header .content-wrapper {
     width: 100%;
     justify-content: space-between;
+  }
+
+  header figure {
+    width: 30%;
   }
 
   header nav {
@@ -426,6 +503,13 @@ aside {
 
   /* Hero Area */
 
+  .hero-area h1 {
+    font-size: 3em;
+    line-height: 1;
+    margin: 0;
+  }
+
+
   /* Aside */
   aside .content-wrapper {
     margin: 50px 0;
@@ -441,6 +525,10 @@ aside {
   }
 
   /* Features */
+
+  .features h2 {
+    margin-bottom: 20px;
+  }
 
   .features article {
     display: flex;
@@ -459,8 +547,17 @@ aside {
     justify-content: space-between;
   }
 
+  .reviews h2 {
+    width: 85%;
+  }
+
   .reviews article div {
     width: 49%;
+  }
+
+  .reviews h3 {
+    width: 75%;
+    margin: 0;
   }
 
   /* Footer */
@@ -468,132 +565,192 @@ aside {
     width: 65%;
   }
 
-  .footer-content {
+  footer .footer-content {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-direction: row;
   }
 
   footer .contact {
     margin-bottom: 0;
   }
 
+  footer h4 {
+    font-size: 1.5em;
+    margin-bottom: 40px;
+  }
+
+  footer p {
+    line-height: 1.285;
+  }
+
   footer .copyright {
     width: 100%;
   }
-}
-
-/* Style adjustments for viewports that meet the condition */
 
 
-/* ==========================================================================
+  /* Style adjustments for viewports that meet the condition */
+
+
+  /* ==========================================================================
      About Page
      ========================================================================== */
 
-.mission-content {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  padding-top: 20px
-}
-
-.mission-content p {
-  width: 45%;
-}
-
-.contact-section .content-wrapper h2 {
-  width: 80%;
-}
-
-.contact-content {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-}
-
-
-/* ==========================================================================
-       FAQ Page
-       ========================================================================== */
-
-.faq .content-wrapper {
-  justify-content: space-between;
-}
-
-.faq-content {
-  flex-basis: 45%;
-}
-
-.faq h2 {
-  width: 100%;
-}
-
-
-
-@media print,
-(-webkit-min-device-pixel-ratio: 1.25),
-(min-resolution: 1.25dppx),
-(min-resolution: 120dpi) {
-  /* Style adjustments for high resolution devices */
-}
-
-@media only screen and (min-width:1200px) {
-  /*Desktop styles here*/
-
-  /* General Styles*/
-  .content-wrapper {
-    max-width: 960px;
+  .mission-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding-top: 20px
   }
 
-  /*header*/
-  header {
-    padding: 15px 0;
+  .mission-content p {
+    width: 45%;
   }
 
-  /*hero*/
-  .hearo-area h1 {
+  .contact-section .content-wrapper h2 {
     width: 80%;
   }
 
-  aside .content-wrapper {
-    justify-content: space-around;
+  .contact-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
   }
 
-  aside .content-wrapper .form-decription,
-  aside .content-wrapper .form {
-    width: 30%;
-  }
-
-  /*Features*/
-  .features h2 {
-    width: 90%;
-  }
-
-  .features article {
-    flex-basis: 33%;
-  }
-
-  .reviews articles div {
-    width: 42%
+  .contact-content h4 {
+    font-size: 1.5em;
   }
 
   /* ==========================================================================
-  About Page
-  ========================================================================== */
-  .mission h2,
-  .contact-section .content-wrapper h2 {
-    width: 95%;
+       FAQ Page
+       ========================================================================== */
+
+  .faq .content-wrapper {
+    justify-content: space-between;
   }
 
-  /* ==========================================================================
-  FAQ Page
-  ========================================================================== */
+  .faq-content {
+    flex-basis: 45%;
+  }
+
   .faq h2 {
     width: 100%;
   }
-}
 
-/* ==========================================================================
+  .faq h4,
+  .faq p {
+    font-size: .875em;
+    line-height: 1.125;
+  }
+
+
+
+  @media print,
+  (-webkit-min-device-pixel-ratio: 1.25),
+  (min-resolution: 1.25dppx),
+  (min-resolution: 120dpi) {
+    /* Style adjustments for high resolution devices */
+  }
+
+  @media only screen and (min-width:1200px) {
+    /*Desktop styles here*/
+
+    /* General Styles*/
+    .content-wrapper {
+      max-width: 960px;
+    }
+
+    /*header*/
+    header {
+      padding: 15px 0;
+    }
+
+    h2 {
+      font-size: 2.25em;
+    }
+
+    h3,
+    h4 {
+      font-size: 1.875em;
+    }
+
+    p {
+      font-size: 1.125em;
+      line-height: 1.333;
+    }
+
+    /*hero*/
+    .hero-area h1 {
+      width: 80%;
+      font-size: 3.75em;
+    }
+
+    /* Aside */
+    aside .content-wrapper {
+      justify-content: space-around;
+    }
+
+    aside .content-wrapper .form-decription,
+    aside .content-wrapper .form {
+      width: 30%;
+    }
+
+    .form-description p {
+      font-size: 1.125em;
+    }
+
+    /*Features*/
+    .features h2 {
+      width: 90%;
+    }
+
+    .features article {
+      flex-basis: 33%;
+    }
+
+    /* Reviews */
+    .reviews h2 {
+      padding-bottom: 50px;
+    }
+
+    .reviews article div {
+      width: 42%;
+    }
+
+    footer h4 {
+      font-size: 1.875em;
+    }
+
+    /* ==========================================================================
+  About Page
+  ========================================================================== */
+    .mission h2,
+    .contact-section .content-wrapper h2 {
+      width: 95%;
+      font-size: 3em;
+    }
+
+    .contact-content h4 {
+      font-size: 1.875em;
+    }
+
+    /* ==========================================================================
+  FAQ Page
+  ========================================================================== */
+    .faq h2 {
+      width: 100%;
+      font-size: 3em;
+    }
+
+    .faq h4,
+    .faq p {
+      font-size: 1.125em;
+      line-height: 1;
+    }
+  }
+
+  /* ==========================================================================
    Print styles.
    Inlined to avoid the additional HTTP request:
    https://www.phpied.com/delay-loading-your-print-css/
@@ -604,7 +761,7 @@ aside {
     *,
     *::before,
     *::after {
-      background: #fff !important;
+      background: transparent !important;
       color: #000 !important;
       /* Black prints faster */
       box-shadow: none !important;
