--- a/css/main.css
+++ b/css/main.css
@@ -123,12 +123,20 @@ h4 {
   font-family: 'Poppins', sans-serif;
   margin: 20px 0;
   font-size: 1.125em,
-    font-weight: 500;
+  font-weight: 500;
 }
 
 p {
   font-size: .875em;
   line-height: 1.285;
+}
+
+img {
+  width: 100%;
+}
+
+figure {
+  margin:0;
 }
 
 address {
@@ -147,6 +155,10 @@ header {
   justify-content: center;
   padding: 15px 0;
   background-color: #202322;
+}
+
+header figure {
+  width: 60%;
 }
 
 header .content-wrapper {
@@ -223,8 +235,13 @@ footer .copyright {
 /* Hero Area*/
 
 .hero-area {
+  background: url(../img/unplugged-retreat.jpg);
+  background-size: cover;
+  background-position: center;
+  min-height: 500px;
   display: flex;
   justify-content: center;
+
 }
 
 .hero-area h1 {
@@ -271,6 +288,9 @@ input[type=button] {
 /*Features*/
 
 .features {
+  background: url('../img/unplugged-retreat-features.jpg');
+  background-size: cover;
+  background-position: center;
   display: flex;
   justify-content: center;
 }
