--- a/css/main.css
+++ b/css/main.css
@@ -103,6 +103,7 @@ body {
   font-size: 1em;
   color: #e2e3ed;
   text-align: left;
+  background-color: #202322;
 }
 
 ul,
@@ -121,6 +122,7 @@ h2 {
   font-family: 'Poppins', sans-serif;
   font-size: 1.875em;
   font-weight: 500;
+  margin: 0;
 }
 
 h3,
@@ -216,18 +218,26 @@ footer .social-icons {
   align-items: center;
 }
 
-footer .social-icons p {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 footer .content-wrapper {
   width: 55%;
 }
 
 footer .contact {
   margin-bottom: 50px;
+}
+
+footer .social-icons p {
+  background-color: #527158;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+footer .social-icons p i {
+  font-size: 1.3125em;
 }
 
 footer .copyright {
@@ -303,7 +313,6 @@ input[type=button] {
 .features .features-items {
   display: flex;
   justify-content: center;
-  align-items: flex-start;
   flex-flow: row wrap;
 }
 
@@ -314,6 +323,11 @@ input[type=button] {
 .features article {
   width: 63%;
   margin: 30px 0;
+}
+
+.features i {
+  font-size: 3.75em;
+  margin-bottom: 40px;
 }
 
 .features p {
@@ -549,6 +563,10 @@ faq-content h4 {
     margin: 0;
   }
 
+  .hero-area {
+    min-height: 600px;
+  }
+
 
   /* Aside */
   aside .content-wrapper {
@@ -570,6 +588,10 @@ faq-content h4 {
     margin-bottom: 20px;
   }
 
+  .features .features-items {
+    align-items: flex-start;
+  }
+
   .features article {
     display: flex;
     align-items: center;
@@ -579,6 +601,10 @@ faq-content h4 {
 
   .features .features-item-description {
     width: 62%;
+  }
+
+  .features i {
+    margin-bottom: 30px;
   }
 
   /* Reviews */
@@ -591,6 +617,7 @@ faq-content h4 {
     width: 85%;
   }
 
+  .reviews article figure,
   .reviews article div {
     width: 49%;
   }
@@ -609,7 +636,6 @@ faq-content h4 {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    flex-direction: row;
   }
 
   footer .contact {
@@ -623,6 +649,11 @@ faq-content h4 {
 
   footer p {
     line-height: 1.285;
+  }
+
+  footer .social-icons {
+    width: 12.5em;
+    justify-content: space-between;
   }
 
   footer .copyright {
